// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state for enterprise, can create 1`] = `
.c4 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  max-width: 600px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
  text-align: center;
}

.c10 {
  box-sizing: border-box;
  text-align: center;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 224px;
}

.c11:hover,
.c11:focus {
  background: #B29DFF;
}

.c11:active {
  background: #C5B6FF;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 24px;
  width: 224px;
}

.c12:hover,
.c12:focus {
  background: rgba(255,255,255,0.07);
}

.c12:active {
  background: rgba(255,255,255,0.13);
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  font-size: 24px;
  margin: 0px;
  margin-bottom: 8px;
  font-weight: 700;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 14px;
  margin: 0px;
  font-weight: 400;
}

.c7 {
  display: block;
  outline: none;
  margin-bottom: 24px;
  margin-left: auto;
  margin-right: auto;
  height: 160px;
}

.c3 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
    </div>
    <div
      class="c3 sc-AxirZ c4"
      width="100%"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <img
            class="c7"
            height="160px"
            src="file_stub"
          />
          <div
            class="c8"
            font-size="24"
            font-weight="700"
          >
            Add your first application to Teleport
          </div>
          <div
            class="c9"
            font-size="14"
            font-weight="400"
            style="opacity: 0.6;"
          >
            Teleport Application Access provides secure access to internal applications.
          </div>
        </div>
        <div
          class="c10"
        >
          <a
            href="/web/discover"
            style="text-decoration: none;"
          >
            <button
              class="c11"
              kind="primary"
              width="224px"
            >
              Add 
              application
            </button>
          </a>
          <a
            class="c12"
            href="https://goteleport.com/docs/application-access/getting-started/"
            kind="border"
            rel="noreferrer"
            target="_blank"
            width="224px"
          >
            View Documentation
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed state 1`] = `
.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c3 a {
  color: #FFFFFF;
}

.c8 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c30 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 88px;
}

.c30:hover,
.c30:focus {
  background: rgba(255,255,255,0.07);
}

.c30:active {
  background: rgba(255,255,255,0.13);
}

.c30:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c21 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c33 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 22px;
}

.c34 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-left: 4px;
  color: rgba(255,255,255,0.72);
  font-size: 14px;
}

.c40 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c38 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c38 .c20 {
  color: inherit;
}

.c38:disabled {
  color: rgba(255,255,255,0.36);
}

.c38:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c38:hover:enabled,
.c38:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c38:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c41 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c41 .c20 {
  color: inherit;
}

.c41:disabled {
  color: rgba(255,255,255,0.36);
}

.c41:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c41:hover:enabled,
.c41:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c41:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c19 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c27 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 16px;
  margin: 0px;
  color: #FFFFFF;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c7 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c22 {
  box-sizing: border-box;
  display: flex;
}

.c26 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #0097a7;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c28 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c31 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #f57c00;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c32 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #00796b;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c35 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #1976d2;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c37 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c24 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c24 > thead > tr > th,
.c24 > tbody > tr > th,
.c24 > tfoot > tr > th,
.c24 > thead > tr > td,
.c24 > tbody > tr > td,
.c24 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c24 > thead > tr > th:first-child,
.c24 > tbody > tr > th:first-child,
.c24 > tfoot > tr > th:first-child,
.c24 > thead > tr > td:first-child,
.c24 > tbody > tr > td:first-child,
.c24 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c24 > thead > tr > th:last-child,
.c24 > tbody > tr > th:last-child,
.c24 > tfoot > tr > th:last-child,
.c24 > thead > tr > td:last-child,
.c24 > tbody > tr > td:last-child,
.c24 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c24 > tbody > tr > td {
  vertical-align: middle;
}

.c24 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c24 > thead > tr > th .c20 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c24 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c24 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c24 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c5 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c36 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top: 1px solid rgba(255,255,255,0.07);
}

.c4 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c29 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
  cursor: pointer;
}

.c29:hover {
  background-color: rgba(255,255,255,0.13);
}

.c39 .c20 {
  font-size: 20px;
}

.c39 .c20:before {
  padding-left: 1px;
}

.c13 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c12 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c10 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c9 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c11 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c11:hover,
.c11:focus,
.c11:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c11::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c15 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c15[disabled] {
  cursor: default;
}

.c18 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c18:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #9F85FF;
}

.c16 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c16:checked + .c17 {
  background: rgba(255,255,255,0.13);
}

.c16:checked + .c17:before {
  transform: translate(16px,-50%);
}

.c16:disabled + .c17 {
  background: #222C59;
}

.c16:disabled + .c17:before {
  background: #455a64;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding-right: 16px;
  padding-left: 16px;
  width: 120px;
}

.c25 > tbody > tr > td {
  vertical-align: middle;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
    </div>
    <div
      class="c3"
      kind="danger"
    >
      <div>
        some error message
      </div>
    </div>
    <div
      class="c4"
    >
      <form
        class="c5"
      >
        <div
          class="c6"
          width="100%"
        >
          <div
            class="c7"
            style="width: 70%;"
          >
            <div
              class="c8"
              width="100%"
            >
              <div
                class="c9"
              >
                <div
                  class="c10"
                >
                  <input
                    class="c11"
                    placeholder="SEARCH..."
                    value=""
                  />
                  <div
                    class="c12"
                  >
                    <div
                      class="c13"
                    >
                      <div
                        class="c14"
                      >
                        <label
                          class="c15"
                        >
                          <input
                            class="c16"
                            type="checkbox"
                          />
                          <div
                            class="c17 c18"
                          />
                        </label>
                        <div
                          class="c19"
                        >
                          Advanced
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              style="line-height: 0px;"
            >
              <span
                class="c20 c21 icon icon-info_outline "
                style="cursor: pointer; font-size: 20px;"
              />
            </div>
          </div>
          <div
            class="c22"
          >
            <div
              class="c23"
              color="text.main"
              style="text-transform: uppercase;"
            >
              Showing 
              <strong>
                1
              </strong>
               - 
              <strong>
                6
              </strong>
               of
               
              <strong>
                6
              </strong>
            </div>
          </div>
        </div>
      </form>
      <table
        class="c24 c25"
      >
        <thead>
          <tr>
            <th
              style="cursor: default;"
            />
            <th>
              <a>
                Name
                <span
                  class="c20 c21 icon icon-chevron-up "
                  title="sort items asc"
                />
              </a>
            </th>
            <th>
              <a>
                Description
                <span
                  class="c20 c21 icon icon-chevrons-expand-vertical "
                  title="sort items"
                />
              </a>
            </th>
            <th
              style="cursor: default;"
            >
              Address
            </th>
            <th
              style="cursor: default;"
            >
              Labels
            </th>
            <th
              style="cursor: default;"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c26"
                height="32px"
                width="32px"
              >
                <div
                  class="c27"
                  color="light"
                  font-size="3"
                >
                  J
                </div>
              </div>
            </td>
            <td>
              Jenkins
            </td>
            <td>
              This is a Jenkins app
            </td>
            <td>
              https://jenkins.teleport-proxy.com
            </td>
            <td>
              <div
                class="c28"
              >
                <div
                  class="c29"
                  kind="secondary"
                >
                  env: prod
                </div>
                <div
                  class="c29"
                  kind="secondary"
                >
                  cluster: one
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c30"
                href="/web/launch/jenkins.one/one/jenkins.teleport-proxy.com"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c31"
                height="32px"
                width="32px"
              >
                <div
                  class="c27"
                  color="light"
                  font-size="3"
                >
                  s
                </div>
              </div>
            </td>
            <td>
              saml_app
            </td>
            <td>
              SAML Application
            </td>
            <td />
            <td>
              <div
                class="c28"
              />
            </td>
            <td
              align="right"
            >
              <a
                class="c30"
                href="http://localhost/enterprise/saml-idp/login/saml_app"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LOGIN
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c32"
                height="32px"
                width="32px"
              >
                <div
                  class="c27"
                  color="light"
                  font-size="3"
                >
                  M
                </div>
              </div>
            </td>
            <td>
              Mattermost1
            </td>
            <td>
              This is a Mattermost app
            </td>
            <td>
              https://mattermost.teleport-proxy.com
            </td>
            <td>
              <div
                class="c28"
              >
                <div
                  class="c29"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c29"
                  kind="secondary"
                >
                  cluster: two
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c30"
                href="/web/launch/mattermost.one/one/mattermost.teleport-proxy.com"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c32"
                height="32px"
                width="32px"
              >
                <div
                  class="c27"
                  color="light"
                  font-size="3"
                >
                  T
                </div>
              </div>
            </td>
            <td>
              TCP
            </td>
            <td>
              This is a TCP app
            </td>
            <td>
              tcp://some-address
            </td>
            <td>
              <div
                class="c28"
              >
                <div
                  class="c29"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c29"
                  kind="secondary"
                >
                  cluster: one
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <button
                class="c30"
                disabled=""
                kind="border"
                title="Cloud or TCP applications cannot be launched by the browser"
                width="88px"
              >
                LAUNCH
              </button>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c31"
                height="32px"
                width="32px"
              >
                <span
                  class="c20 c33 icon icon-amazonaws "
                  font-size="6"
                />
              </div>
            </td>
            <td>
              aws-console-1
            </td>
            <td>
              This is an AWS Console app
            </td>
            <td>
              https://awsconsole-1.teleport-proxy.com
            </td>
            <td>
              <div
                class="c28"
              >
                <div
                  class="c29"
                  kind="secondary"
                >
                  aws_account_id: A1234
                </div>
                <div
                  class="c29"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c29"
                  kind="secondary"
                >
                  cluster: two
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <button
                class="c30"
                kind="border"
                width="88px"
              >
                LAUNCH
                <span
                  class="c20 c34 icon icon-caret-down "
                  color="text.slightlyMuted"
                  font-size="2"
                />
              </button>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c35"
                height="32px"
                width="32px"
              >
                <div
                  class="c27"
                  color="light"
                  font-size="3"
                >
                  C
                </div>
              </div>
            </td>
            <td>
              Cloud
            </td>
            <td>
              This is a Cloud specific app
            </td>
            <td>
              cloud://some-address
            </td>
            <td>
              <div
                class="c28"
              >
                <div
                  class="c29"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c29"
                  kind="secondary"
                >
                  cluster: one
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <button
                class="c30"
                disabled=""
                kind="border"
                title="Cloud or TCP applications cannot be launched by the browser"
                width="88px"
              >
                LAUNCH
              </button>
            </td>
          </tr>
        </tbody>
      </table>
      <nav
        class="c36"
      >
        <div
          class="c37"
          width="100%"
        >
          <div
            class="c22"
          >
            <button
              class="c38 c39"
              title="Previous page"
            >
              <span
                class="c20 c40 icon icon-arrow-left-circle "
                font-size="3"
              />
            </button>
            <button
              class="c41 c39"
              title="Next page"
            >
              <span
                class="c20 c40 icon icon-arrow-right-circle "
                font-size="3"
              />
            </button>
          </div>
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`loaded state 1`] = `
.c8 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:hover,
.c3:focus {
  background: #B29DFF;
}

.c3:active {
  background: #C5B6FF;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c30 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 88px;
}

.c30:hover,
.c30:focus {
  background: rgba(255,255,255,0.07);
}

.c30:active {
  background: rgba(255,255,255,0.13);
}

.c30:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c21 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c33 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 22px;
}

.c34 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-left: 4px;
  color: rgba(255,255,255,0.72);
  font-size: 14px;
}

.c40 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c38 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c38 .c20 {
  color: inherit;
}

.c38:disabled {
  color: rgba(255,255,255,0.36);
}

.c38:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c38:hover:enabled,
.c38:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c38:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c41 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c41 .c20 {
  color: inherit;
}

.c41:disabled {
  color: rgba(255,255,255,0.36);
}

.c41:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c41:hover:enabled,
.c41:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c41:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c19 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c27 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 16px;
  margin: 0px;
  color: #FFFFFF;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c7 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c22 {
  box-sizing: border-box;
  display: flex;
}

.c26 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #0097a7;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c28 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c31 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #f57c00;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c32 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #00796b;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c35 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #1976d2;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c37 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c24 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c24 > thead > tr > th,
.c24 > tbody > tr > th,
.c24 > tfoot > tr > th,
.c24 > thead > tr > td,
.c24 > tbody > tr > td,
.c24 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c24 > thead > tr > th:first-child,
.c24 > tbody > tr > th:first-child,
.c24 > tfoot > tr > th:first-child,
.c24 > thead > tr > td:first-child,
.c24 > tbody > tr > td:first-child,
.c24 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c24 > thead > tr > th:last-child,
.c24 > tbody > tr > th:last-child,
.c24 > tfoot > tr > th:last-child,
.c24 > thead > tr > td:last-child,
.c24 > tbody > tr > td:last-child,
.c24 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c24 > tbody > tr > td {
  vertical-align: middle;
}

.c24 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c24 > thead > tr > th .c20 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c24 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c24 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c24 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c5 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c36 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top: 1px solid rgba(255,255,255,0.07);
}

.c4 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c29 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
  cursor: pointer;
}

.c29:hover {
  background-color: rgba(255,255,255,0.13);
}

.c39 .c20 {
  font-size: 20px;
}

.c39 .c20:before {
  padding-left: 1px;
}

.c13 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c12 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c10 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c9 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c11 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c11:hover,
.c11:focus,
.c11:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c11::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c15 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c15[disabled] {
  cursor: default;
}

.c18 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c18:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #9F85FF;
}

.c16 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c16:checked + .c17 {
  background: rgba(255,255,255,0.13);
}

.c16:checked + .c17:before {
  transform: translate(16px,-50%);
}

.c16:disabled + .c17 {
  background: #222C59;
}

.c16:disabled + .c17:before {
  background: #455a64;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding-right: 16px;
  padding-left: 16px;
  width: 120px;
}

.c25 > tbody > tr > td {
  vertical-align: middle;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
      <a
        href="/web/discover"
        style="text-decoration: none;"
      >
        <button
          class="c3"
          kind="primary"
          title=""
          width="240px"
        >
          Add 
          application
        </button>
      </a>
    </div>
    <div
      class="c4"
    >
      <form
        class="c5"
      >
        <div
          class="c6"
          width="100%"
        >
          <div
            class="c7"
            style="width: 70%;"
          >
            <div
              class="c8"
              width="100%"
            >
              <div
                class="c9"
              >
                <div
                  class="c10"
                >
                  <input
                    class="c11"
                    placeholder="SEARCH..."
                    value=""
                  />
                  <div
                    class="c12"
                  >
                    <div
                      class="c13"
                    >
                      <div
                        class="c14"
                      >
                        <label
                          class="c15"
                        >
                          <input
                            class="c16"
                            type="checkbox"
                          />
                          <div
                            class="c17 c18"
                          />
                        </label>
                        <div
                          class="c19"
                        >
                          Advanced
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              style="line-height: 0px;"
            >
              <span
                class="c20 c21 icon icon-info_outline "
                style="cursor: pointer; font-size: 20px;"
              />
            </div>
          </div>
          <div
            class="c22"
          >
            <div
              class="c23"
              color="text.main"
              style="text-transform: uppercase;"
            >
              Showing 
              <strong>
                1
              </strong>
               - 
              <strong>
                6
              </strong>
               of
               
              <strong>
                6
              </strong>
            </div>
          </div>
        </div>
      </form>
      <table
        class="c24 c25"
      >
        <thead>
          <tr>
            <th
              style="cursor: default;"
            />
            <th>
              <a>
                Name
                <span
                  class="c20 c21 icon icon-chevron-up "
                  title="sort items asc"
                />
              </a>
            </th>
            <th>
              <a>
                Description
                <span
                  class="c20 c21 icon icon-chevrons-expand-vertical "
                  title="sort items"
                />
              </a>
            </th>
            <th
              style="cursor: default;"
            >
              Address
            </th>
            <th
              style="cursor: default;"
            >
              Labels
            </th>
            <th
              style="cursor: default;"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c26"
                height="32px"
                width="32px"
              >
                <div
                  class="c27"
                  color="light"
                  font-size="3"
                >
                  J
                </div>
              </div>
            </td>
            <td>
              Jenkins
            </td>
            <td>
              This is a Jenkins app
            </td>
            <td>
              https://jenkins.teleport-proxy.com
            </td>
            <td>
              <div
                class="c28"
              >
                <div
                  class="c29"
                  kind="secondary"
                >
                  env: prod
                </div>
                <div
                  class="c29"
                  kind="secondary"
                >
                  cluster: one
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c30"
                href="/web/launch/jenkins.one/one/jenkins.teleport-proxy.com"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c31"
                height="32px"
                width="32px"
              >
                <div
                  class="c27"
                  color="light"
                  font-size="3"
                >
                  s
                </div>
              </div>
            </td>
            <td>
              saml_app
            </td>
            <td>
              SAML Application
            </td>
            <td />
            <td>
              <div
                class="c28"
              />
            </td>
            <td
              align="right"
            >
              <a
                class="c30"
                href="http://localhost/enterprise/saml-idp/login/saml_app"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LOGIN
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c32"
                height="32px"
                width="32px"
              >
                <div
                  class="c27"
                  color="light"
                  font-size="3"
                >
                  M
                </div>
              </div>
            </td>
            <td>
              Mattermost1
            </td>
            <td>
              This is a Mattermost app
            </td>
            <td>
              https://mattermost.teleport-proxy.com
            </td>
            <td>
              <div
                class="c28"
              >
                <div
                  class="c29"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c29"
                  kind="secondary"
                >
                  cluster: two
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c30"
                href="/web/launch/mattermost.one/one/mattermost.teleport-proxy.com"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c32"
                height="32px"
                width="32px"
              >
                <div
                  class="c27"
                  color="light"
                  font-size="3"
                >
                  T
                </div>
              </div>
            </td>
            <td>
              TCP
            </td>
            <td>
              This is a TCP app
            </td>
            <td>
              tcp://some-address
            </td>
            <td>
              <div
                class="c28"
              >
                <div
                  class="c29"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c29"
                  kind="secondary"
                >
                  cluster: one
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <button
                class="c30"
                disabled=""
                kind="border"
                title="Cloud or TCP applications cannot be launched by the browser"
                width="88px"
              >
                LAUNCH
              </button>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c31"
                height="32px"
                width="32px"
              >
                <span
                  class="c20 c33 icon icon-amazonaws "
                  font-size="6"
                />
              </div>
            </td>
            <td>
              aws-console-1
            </td>
            <td>
              This is an AWS Console app
            </td>
            <td>
              https://awsconsole-1.teleport-proxy.com
            </td>
            <td>
              <div
                class="c28"
              >
                <div
                  class="c29"
                  kind="secondary"
                >
                  aws_account_id: A1234
                </div>
                <div
                  class="c29"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c29"
                  kind="secondary"
                >
                  cluster: two
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <button
                class="c30"
                kind="border"
                width="88px"
              >
                LAUNCH
                <span
                  class="c20 c34 icon icon-caret-down "
                  color="text.slightlyMuted"
                  font-size="2"
                />
              </button>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c35"
                height="32px"
                width="32px"
              >
                <div
                  class="c27"
                  color="light"
                  font-size="3"
                >
                  C
                </div>
              </div>
            </td>
            <td>
              Cloud
            </td>
            <td>
              This is a Cloud specific app
            </td>
            <td>
              cloud://some-address
            </td>
            <td>
              <div
                class="c28"
              >
                <div
                  class="c29"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c29"
                  kind="secondary"
                >
                  cluster: one
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <button
                class="c30"
                disabled=""
                kind="border"
                title="Cloud or TCP applications cannot be launched by the browser"
                width="88px"
              >
                LAUNCH
              </button>
            </td>
          </tr>
        </tbody>
      </table>
      <nav
        class="c36"
      >
        <div
          class="c37"
          width="100%"
        >
          <div
            class="c22"
          >
            <button
              class="c38 c39"
              title="Previous page"
            >
              <span
                class="c20 c40 icon icon-arrow-left-circle "
                font-size="3"
              />
            </button>
            <button
              class="c41 c39"
              title="Next page"
            >
              <span
                class="c20 c40 icon icon-arrow-right-circle "
                font-size="3"
              />
            </button>
          </div>
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`readonly empty state 1`] = `
.c3 {
  box-sizing: border-box;
  max-width: 664px;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  color: #FFFFFF;
  text-align: center;
  border-radius: 12px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
    </div>
    <div
      class="c3"
      color="text.main"
    >
      <div
        class="c4"
      >
        No Applications Found
      </div>
      <div
        class="c5"
      >
        Either there are no 
        applications
         in the "
        <span
          class="c6"
        >
          im-a-cluster
        </span>
        " cluster, or your roles don't grant you access.
      </div>
    </div>
  </div>
</div>
`;
